tests/toy/neg/000740_mutation.toylang
program a = { a = int a + a; } .
